# api

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile
config/: services.jsonc
docs/: status_codes.md
docs/honeywell/: README.md
src/: appdata.rs  config.rs  database.rs  environment.rs  main.rs
src/common/: mod.rs  service.rs  user.rs
src/endpoints/: mod.rs
src/endpoints/assistant/: webhook.rs
src/endpoints/auth/: login.rs  mod.rs  register.rs  session.rs
src/endpoints/google/: mod.rs
src/endpoints/honeywell/: install.rs  mod.rs
src/endpoints/oauth/: authorization.rs  finish.rs  login.rs  mod.rs  token.rs
src/endpoints/services/: add.rs  get.rs  mod.rs
src/services/: honeywell.rs  mod.rs
src/threads/: mod.rs
src/types/: assistant_incoming.rs  assistant_outgoing.rs  honeywell.rs  mod.rs  service.rs
templates/: redirect.html
