[package]
name = "connectedhome"
version = "0.1.0"
authors = ["Tobias de Bruijn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.1", features = ["json", "blocking", "cookies"] }
base64 = "0.13.0"
mysql = "20.1.0"
rand = "0.8.3"
tera = "1.6.1"
qstring = "0.7.2"
sha2 = "0.9.3"
bcrypt = "0.9.0"
chrono = "0.4.19"
magic-crypt = "3.1.7"
regex = "1.4.5"